--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -1,5 +1,5 @@
 ---
-title: Buttons
+title: Button
 description:
   Buttons are used to initialize an action. Button labels express what action
   will occur when the user interacts with it.
