--- a/src/pages/all-about-carbon/what-is-carbon.mdx
+++ b/src/pages/all-about-carbon/what-is-carbon.mdx
@@ -28,10 +28,10 @@ community of contributors.
 
 A design system is a collection of pre-built, reusable assets—components,
 patterns, guidance, and code—that allows its users to build consistent digital
-<<<<<<< HEAD experiences faster. By using the pre-built and universal assets of
-Carbon, the time teams spend designing and building is minimized. Instead of
-building and re-building basic elements, they can spend that time customizing
-their products to address specific client use cases.
+experiences faster. By using the pre-built and universal assets of Carbon, the
+time teams spend designing and building is minimized. Instead of building and
+re-building basic elements, they can spend that time customizing their products
+to address specific client use cases.
 
 ### Carbon is open source
 
