docs(popover): add popover to nav items

--- a/src/pages/components/popover/style.mdx
+++ b/src/pages/components/popover/style.mdx
@@ -1,6 +1,7 @@
 ---
 title: Popover
-description: A popover is a layer that pops up over all other elements on a page.
+description:
+  A popover is a layer that pops up over all other elements on a page.
 tabs: ['Usage', 'Style']
 ---
 
